2002-12-17	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Using user's default shell in setting initial preferences.
    

2002-12-16	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Removed ugly hack of spinning off a new thread when 
      switching sessions using popup menu. Calling selectSession: 
      directly now works.
      

2002-12-16	fabian
    * Got the addressbook popup button icon to work
    * Updated strings files for Chinese
    
2002-12-16	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Removed addressbook toolbar item since the 
      addressbook popup menu gives similar functionality.
      Ideally, the icon for the popup button should be 
      the addressbook icon, but I couldn't get it to work.
      More research needs to be done on that...
      
    * Fixed bugs in MainMenu that did not save addressbook 
      when entries were deleted.
      

2002-12-16	fabian
    * Change version number to 0.5.6
    * Make author name localized strings in About panel.
    * Add a "Report a Bug" link in About panel.
    * Turn on the GREED_KEYDOWN flag in PTYTextView.m to 
      allow special key to work when IM is turned on.
    * Add a 2nd font option to display CJK font to address
      some screen text alignment problems.
    * Add anti-idle settings to AddressBook
      
2002-12-14	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added popup button in toolbar for quick access to 
      addressbook entries.
      
    * Added missing OK button in AddressBook panel. 
      Was causing addressbook changes not to be saved.
    
    * Refactored addressbook code by introducing an 
      "executeABCommand:" method in MainMenu.
      

2002-12-11	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Made links to authors and web site in the About
      panel of the English NIB.


2002-12-11	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Removed keyDown code from PsudoTerminal. 
      First responder is TEXTVIEW.


2002-12-11	fabian