@@ -2,6 +2,10 @@
 
     * Using user's default shell in setting initial preferences.
     
+    * Added drag-n-drop support for the text view. Text and file 
+      names get pasted into the shell when dragged and dropped 
+      onto the text view.
+    
 
 2002-12-16	Ujwal S. Sathyam <ujwal@setlurgroup.com>
 
